support wechatide uri

--- a/wechat-devtools.desktop
+++ b/wechat-devtools.desktop
@@ -9,3 +9,4 @@ Icon=wechat-devtools
 Type=Application
 Terminal=false
 StartupWMClass=crx_ikhdnebglabgeplgnhnjgldiemdflddf
+MimeType=x-scheme-handler/wechatide
