New snapshot. Build from source.

--- a/mapton.desktop
+++ b/mapton.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Mapton
 Comment=Some kind of map application
 Exec=mapton
-Icon=gnome-maps
+Icon=mapton
 Terminal=false
 Categories=Application;Education;
 StartupNotify=true
