upgpkg: pacman-git 5.1.1.r115.g10bcf66d-1
update optdepends and makepkg.conf to match core/pacman

--- a/makepkg.conf
+++ b/makepkg.conf
@@ -37,8 +37,8 @@ CHOST="@CHOST@"
 
 #-- Compiler and Linker Flags
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
-CFLAGS="@CARCHFLAGS@ -mtune=generic -O2 -pipe -fstack-protector-strong -fno-plt"
-CXXFLAGS="@CARCHFLAGS@ -mtune=generic -O2 -pipe -fstack-protector-strong -fno-plt"
+CFLAGS="@CARCHFLAGS@ -mtune=generic -O2 -pipe -fno-plt"
+CXXFLAGS="@CARCHFLAGS@ -mtune=generic -O2 -pipe -fno-plt"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
 #-- Make Flags: change this for DistCC/SMP systems
 #MAKEFLAGS="-j2"
