--- a/earthwalker.env
+++ b/earthwalker.env
@@ -1,8 +1,10 @@
+### IMPORTANT!!! THIS FILE IS NO LONGER USED! ANYTHING IN HERE CAN BE CONFIGURED IN CONFIG.TOML/EARTHWALKER.SERVICE!!! ###
+
 ### Paths
 
 # The path where the static files, like javascript and templates are located.`static` and `templates` are expected to be subdirectories of the specified path. Defaults to the location of the binary.
 #EARTHWALKER_STATIC_PATH=<location of binary>
-EARTHWALKER_STATIC_PATH=/usr/share/earthwalker/
+EARTHWALKER_STATIC_PATH=/usr/share/earthwalker/public
 
 
 # The path where the config file is located. Defaults to $PWD/config.toml
