--- a/SimulationCraft.desktop
+++ b/SimulationCraft.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Name=SimulationCraftGit
+Name=SimulationCraft
 Comment=A tool to explore combat mechanics in the popular MMO RPG World of Warcraft (tm). Multi-player event-driven simulator written in C++ that models raid damage.
-Exec=simulationcraft-git
-Icon=SimulationCraftGit
+Exec=simulationcraft
+Icon=SimulationCraft
 Terminal=false
 Type=Application
 StartupNotify=true
