--- a/irony-mod-manager-bin.desktop
+++ b/irony-mod-manager-bin.desktop
@@ -2,7 +2,7 @@
 Name=Irony Mod Mananger
 Comment=A mod manager and launcher for paradox interactive games
 Exec=/usr/bin/irony-mod-manager-bin %U
-Icon=irony-mod-manager
+Icon=irony-mod-manager-bin
 Terminal=false
 Type=Application
 Categories=Network;FileTransfer;Game;
