--- a/nextcloud-files-scan-all.service
+++ b/nextcloud-files-scan-all.service
@@ -3,7 +3,7 @@ Description=Nextcloud; scan all files
 
 [Service]
 User=http
-ExecStart=/usr/share/webapps/nextcloud/occ files:scan --all
+ExecStart=/usr/bin/php -f /usr/share/webapps/nextcloud/occ files:scan --all
 
 [Install]
 WantedBy=basic.target
