--- a/nextcloud-preview-pre-generate.service
+++ b/nextcloud-preview-pre-generate.service
@@ -3,7 +3,7 @@ Description=Nextcloud; generate previews for new files only
 
 [Service]
 User=http
-ExecStart=/usr/share/webapps/nextcloud/occ preview:pre-generate
+ExecStart=/usr/bin/php -f /usr/share/webapps/nextcloud/occ preview:pre-generate
 
 [Install]
 WantedBy=basic.target
