--- a/config
+++ b/config
@@ -25,3 +25,7 @@ JAVA_SYS_PROPS="\
   -Dconfig.file=/etc/jitsi-videobridge/jvb.conf\
   -Djava.util.prefs.userRoot=/var/lib/jitsi-videobridge\
 "
+
+# JDK15
+# You can try this if you use JDK15
+# VIDEOBRIDGE_GC_TYPE=G1GC
