Not particularly important changes to the shortcut

--- a/freezer.desktop
+++ b/freezer.desktop
@@ -3,7 +3,7 @@ Name=Freezer
 StartupNotify=true
 Exec=freezer %U
 Keywords=Freezer;Music;Player;Deezer;
-Keywords[ru]=Физер;Музыка;Плеер;Дизер;
+Keywords[ru]=Фризер;Музыка;Плеер;Дизер;
 Categories=AudioVideo;Player;Audio;
 Icon=freezer
 Terminal=false
