--- a/wol@.service
+++ b/wol@.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Wake-on-LAN for %i
 Requires=network.target
-After=network.target
+After=network.target network-online.target
 
 [Service]
 ExecStart=/usr/bin/ethtool -s %i wol g
