--- a/dendrite.service
+++ b/dendrite.service
@@ -7,7 +7,7 @@ Wants=postgresql.service
 [Service]
 User=dendrite
 Group=dendrite
-ExecStart=/usr/bin/dendrite
+ExecStart=/usr/bin/dendrite --config=/etc/dendrite/config.yaml
 
 [Install]
 WantedBy=multi-user.target
