--- a/snort.service
+++ b/snort.service
@@ -2,7 +2,8 @@
 Description=Snort IDS daemon in NFQUEUE mode
 
 [Service]
-ExecStart=/usr/bin/snort -Q -u snort -g snort -c /etc/snort/snort.conf -l /var/log/snort
+ExecStart=/usr/bin/snort -Q -c /etc/snort/snort.lua -l /var/log/snort --tweaks local
+ExecReload=kill -HUP $MAINPID
 
 [Install]
 WantedBy=multi-user.target
