--- a/dkms.conf
+++ b/dkms.conf
@@ -3,7 +3,7 @@ PACKAGE_VERSION="@PKGVER@"
 MAKE[0]="make -C /lib/modules/$kernelver/build M=/var/lib/dkms/$PACKAGE_NAME/$PACKAGE_VERSION/build modules CONFIG_AMD_SFH_HID=m"
 CLEAN="make -C /lib/modules/$kernelver/build M=/var/lib/dkms/PACKAGE_NAME/$PACKAGE_VERSION/build clean CONFIG_AMD_SFH_HID=m"
 BUILT_MODULE_NAME[0]="amd-sfh-pci"
-BUILT_MODULE_NAME[1]="amd-sfh-hid"
+BUILT_MODULE_NAME[1]="amd-sfh-plat"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/misc"
 DEST_MODULE_LOCATION[1]="/kernel/drivers/misc"
 AUTOINSTALL="yes"
