--- a/customization.cfg
+++ b/customization.cfg
@@ -15,7 +15,7 @@ _EXT_CONFIG_PATH=~/.config/frogminer/linux-tkg.cfg
 
 # [Arch specific] Set to anything else than "true" to limit cleanup operations and keep source and files generated during compilation.
 # Default is "true".
-_NUKR="true"
+_NUKR="false"
 
 # Custom compiler root dirs - Leave empty to use system compilers
 # Example: CUSTOM_GCC_PATH="/home/frog/PKGBUILDS/mostlyportable-gcc/gcc-mostlyportable-9.2.0"
