--- a/prometheus-postgresql-exporter.service
+++ b/prometheus-postgresql-exporter.service
@@ -2,6 +2,7 @@
 Description=Prometheus exporter for PostgreSQL
 After=network.target
 
+[Service]
 EnvironmentFile=-/etc/conf.d/prometheus-postgresql-exporter
 ExecStart=/usr/bin/prometheus_postgresql_exporter $POSTGRES_EXPORTER_ARGS
 Restart=on-failure
