More logging from Pion

--- a/galene.service
+++ b/galene.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Galene videoconferencing server
+Description=Galène videoconferencing server
 Documentation=https://galene.org
 Documentation=file:///usr/share/doc/galene/README
 After=network.target
@@ -12,8 +12,11 @@ WorkingDirectory=~
 ExecStart=/usr/bin/galene -static /usr/share/galene/static
 Restart=on-failure
 LimitNOFILE=65536
+Environment=PION_LOG_TRACE=""
+Environment=PION_LOG_DEBUG=""
 Environment=PION_LOG_INFO="ice"
 Environment=PION_LOG_WARNING="all"
+Environment=PION_LOG_ERROR="all"
 
 [Install]
 WantedBy=multi-user.target
