--- a/customization.cfg
+++ b/customization.cfg
@@ -17,8 +17,7 @@ _EXT_CONFIG_PATH=~/.config/frogminer/linux-tkg.cfg
 # Default is "true".
 _NUKR="true"
 
-# 
-Custom compiler root dirs - Leave empty to use system compilers
+# Custom compiler root dirs - Leave empty to use system compilers
 # Example: CUSTOM_GCC_PATH="/home/frog/PKGBUILDS/mostlyportable-gcc/gcc-mostlyportable-9.2.0"
 CUSTOM_GCC_PATH=""
 
