--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
+*.tar
+*.tar.*
+*.jar
+*.exe
+*.msi
 *.AppImage
-*.pkg.tar.zst
-pkg/
-squashfs-root/
+*.deb
+*.rpm
+*.zip
+*.tgz
+*.log
+*.log.*
+*.sig
+
 src/
+pkg/
+
+squashfs-root/
