--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-*.tar.[gx]z
-*.tar.zstd
-pkg/
+*.tar
+*.tar.*
+*.jar
+*.exe
+*.msi
+*.AppImage
+*.deb
+*.rpm
+*.zip
+*.tgz
+*.log
+*.log.*
+*.sig
+
 src/
+pkg/
