Trimmed unneccessary dependencies
- Removed 'gcc' & 'sed' from the makedepends array, as these are part of base-devel.
- Bump in pkgrel.
- Expanded the .gitignore file.
- Syntax-tidying.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,22 @@
 *.tar
-*.tar.zst
+*.tar.*
+*.jar
+*.exe
+*.msi
+*.AppImage
+*.deb
+*.rpm
+*.zip
+*.tgz
+*.log
+*.log.*
+*.sig
+
+src/
+pkg/
+
 encoding.ukb
 gfetch*
-pkg/
-src/
 ukbconv*
 ukbfetch*
 ukblink*
